fix "collapse menu" link color

--- a/packages/calypso-color-schemes/src/shared/color-schemes/_classic-bright.scss
+++ b/packages/calypso-color-schemes/src/shared/color-schemes/_classic-bright.scss
@@ -111,6 +111,9 @@
 	--color-navredesign-sidebar-submenu-hover-text: var(--color-accent);
 	--color-navredesign-sidebar-submenu-selected-hover-text: var(--color-accent);
 
+	/* Collapse Menu Button Fix */
+	--color-collapse-menu-text: var(--color-sidebar-text-alternative);
+
 	/* Command Palette Items */
 	--wp-admin-theme-color: var(--studio-pink-50);
 }
